# Copyright 2025
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//bazel:psi.bzl", "psi_cc_binary", "psi_cc_library", "psi_cc_test")

package(default_visibility = ["//visibility:public"])

psi_cc_library(
    name = "common",
    srcs = ["common.cc"],
    hdrs = ["common.h"],
    deps = [
        "//psi/proto:psi_v2_cc_proto",
        "//psi/utils:io",
        "//psi/utils:test_utils",
    ],
)

psi_cc_library(
    name = "client",
    srcs = ["client.cc"],
    hdrs = ["client.h"],
    deps = [
        ":common",
        ":threshold_ecdh_oprf_psi",
        "//psi/algorithm/ecdh/ub_psi:client",
        "//psi/utils:sync",
    ],
)

psi_cc_library(
    name = "server",
    srcs = ["server.cc"],
    hdrs = ["server.h"],
    deps = [
        ":common",
        ":threshold_ecdh_oprf_psi",
        "//psi/algorithm/ecdh/ub_psi:server",
        "//psi/utils:ec",
        "//psi/utils:sync",
    ],
)

psi_cc_library(
    name = "threshold_ecdh_oprf_psi",
    srcs = ["threshold_ecdh_oprf_psi.cc"],
    hdrs = ["threshold_ecdh_oprf_psi.h"],
    deps = [
        "//psi/algorithm/ecdh/ub_psi:ecdh_oprf_psi",
        "//psi/utils:serialize",
        "@yacl//yacl/crypto/rand",
    ],
)

psi_cc_binary(
    name = "threshold_ub_psi_benchmark",
    srcs = ["threshold_ub_psi_benchmark.cc"],
    deps = ["@com_github_google_benchmark//:benchmark_main"] + [
        ":client",
        ":common",
        ":server",
        "//psi/utils:test_utils",
        "//psi/utils:random_str",
        "@yacl//yacl/link",
    ],
)

psi_cc_test(
    name = "threshold_ub_psi_test",
    srcs = ["threshold_ub_psi_test.cc"],
    deps = [
        ":client",
        ":common",
        ":server",
        "//psi/utils:random_str",
        "//psi/utils:test_utils",
        "@yacl//yacl/link",
    ],
)
