# Copyright 2024 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//bazel:psi.bzl", "psi_cc_library", "psi_cc_test")

package(default_visibility = ["//visibility:public"])

psi_cc_library(
    name = "kw_pir",
    srcs = ["kw_pir.cc"],
    hdrs = [
        "index_pir.h",
        "kw_pir.h",
    ],
    linkopts = [
        "-ldl",
        "-lm",
    ],
    deps = [
        "//psi/utils:cuckoo_index",
        "@yacl//yacl/base:byte_container_view",
        "@yacl//yacl/base:exception",
        "@yacl//yacl/base:int128",
        "@yacl//yacl/crypto/rand",
    ],
)

psi_cc_test(
    name = "kw_pir_test",
    srcs = ["kw_pir_test.cc"],
    deps = [
        ":kw_pir",
        "//psi/algorithm/sealpir:seal_pir",
    ],
)
