# Copyright 2024 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//bazel:psi.bzl", "psi_cc_library", "psi_cc_test")

package(default_visibility = ["//visibility:public"])

psi_cc_library(
    name = "nty_mp_psi",
    srcs = [
        "nty_mp_psi.cc",
    ],
    hdrs = [
        "nty_mp_psi.h",
    ],
    deps = [
        ":server_aided_psi",
        "//psi/algorithm/rr22:rr22_utils",
        "//psi/algorithm/rr22/okvs:baxos",
        "//psi/utils:communication",
        "//psi/utils:sync",
        "//psi/utils:test_utils",
        "@abseil-cpp//absl/types:span",
        "@sparsehash",
        "@yacl//yacl/base:exception",
        "@yacl//yacl/base:int128",
        "@yacl//yacl/crypto/aes:aes_intrinsics",
        "@yacl//yacl/crypto/hash:hash_utils",
        "@yacl//yacl/crypto/rand",
        "@yacl//yacl/kernel/algorithms:base_ot",
        "@yacl//yacl/kernel/algorithms:iknp_ote",
        "@yacl//yacl/kernel/algorithms:kkrt_ote",
        "@yacl//yacl/link",
    ],
)

psi_cc_library(
    name = "server_aided_psi",
    srcs = [
        "server_aided_psi.cc",
    ],
    hdrs = [
        "server_aided_psi.h",
    ],
    deps = [
        "@yacl//yacl/base:int128",
        "@yacl//yacl/crypto/aes:aes_intrinsics",
        "@yacl//yacl/crypto/rand",
        "@yacl//yacl/link",
    ],
)

psi_cc_test(
    name = "nty_mp_psi_test",
    srcs = ["nty_mp_psi_test.cc"],
    tags = ["manual"],
    deps = [
        ":nty_mp_psi",
        "@yacl//yacl/utils:elapsed_timer",
    ],
)
